# fastws-example

./: .gitignore  README.md  pyproject.toml
.devcontainer/: post-create-command.sh
api/: main.py  service.py
api/feature_0/: subscribe.py
api/feature_1/: ping.py
tests/: test_example_app.py
