[tool.poetry]
name = "api"
version = "0.1.0"
description = "An example project using FastWS"
authors = ["endrekrohn <endre@skript.no>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastws = "^0.1.3"
uvicorn = { extras = ["standard"], version = "^0.22.0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
black = "^23.3.0"
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
